//
// Created by caleb on 14/11/2025.
//

#ifndef GERENCIADOR_DE_HOTEIS_UNB_CSHOTEL_HPP
#define GERENCIADOR_DE_HOTEIS_UNB_CSHOTEL_HPP

#include "InterfaceServicoHotel.hpp"
#include "../../../../libs/io/IO.hpp"
#include <iostream>
using namespace std;
namespace Hotelaria {
    class ControladoraServicoHotel : public InterfaceServicoHotel {
    };
}

#endif //GERENCIADOR_DE_HOTEIS_UNB_CSHOTEL_HPP