@startuml
skinparam linetype ortho
skinparam packageStyle rectangle
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoAutenticavel {
		- bool estaAutenticado = false
		+ bool autenticar(Email*) override;
		+ void setEstaAutenticado(bool estaAutenticado) override;
		+ bool getEstaAutenticado() override;
		+ InterfaceServicoAutenticavel* getHacke();
		+ setControladoraServicoAutenticavel(InterfaceServicoAutenticavel *controladora_servico_autenticavel)
		+ setEstaAutenticado(bool estaAutenticado)
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoAutenticavel {
		+ bool autenticar(const Email, const Senha) override;
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoAutenticavel {
		+ virtual bool autenticar(Email*)
		+ virtual void setEstaAutenticado(bool estaAutenticado)
		+ virtual bool getEstaAutenticado()
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoAutenticavel {
		+ virtual bool autenticar(const Email, const Senha)
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoHospede {
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoHospede {
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoHospede {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoHospede {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoHotel {
		+ string valor
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoHotel {
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoHotel {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoHotel {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoPessoal {
		- const static int INCLUIR = 1
		- const static int REMOVER = 2
		- const static int PESQUISAR = 3
		- const static int EDITAR = 4
		- const static int RETORNAR = 5
		+ void setControladoraServicoPessoal(InterfaceServicoPessoal *);
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoPessoal {
		+ bool incluir(const Gerente);
		+ bool remover(const Email email);
		+ bool pesquisar(Gerente);
		+ bool editar(const Gerente);
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoPessoal {
		- virtual void setControladoraServicoPessoal(InterfaceServicoPessoal *)
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoPessoal {
		+ virtual bool incluir(const Gerente)
		+ virtual bool remover(const Email email)
		+ virtual bool pesquisar(Gerente)
		+ virtual bool editar(const Gerente)
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoQuarto {
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoQuarto {
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoQuarto {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoQuarto {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoReserva {
	}
}
package "Hotelaria" #LightGreen {
class ControladoraServicoReserva {
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoReserva {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceServicoReserva {
		+ virtual bool valor()
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoAcessoGerente {
	}
}
package "Hotelaria" #LightGreen {
class ControladoraApresentacaoAcessoHospede {
	}
}
package "Hotelaria" #LightGreen {
interface InterfaceApresentacaoAcesso {
	}
}
ControladoraApresentacaoAutenticavel  ..|> InterfaceApresentacaoAutenticavel : Implementação
ControladoraServicoAutenticavel  ..|> InterfaceServicoAutenticavel : Implementação
ControladoraApresentacaoHospede  ..|> InterfaceApresentacaoHospede : Implementação
ControladoraServicoHospede  ..|> InterfaceServicoHospede : Implementação
ControladoraServicoHotel  ..|> InterfaceServicoHotel : Implementação
ControladoraApresentacaoPessoal  ..|> InterfaceApresentacaoPessoal : Implementação
ControladoraServicoPessoal  ..|> InterfaceServicoPessoal : Implementação
ControladoraApresentacaoQuarto  ..|> InterfaceApresentacaoQuarto : Implementação
ControladoraServicoQuarto  ..|> InterfaceServicoQuarto : Implementação
ControladoraApresentacaoReserva  ..|> InterfaceApresentacaoReserva : Implementação
ControladoraServicoReserva  ..|> InterfaceServicoReserva : Implementação
ControladoraApresentacaoAcessoGerente  ..|> InterfaceApresentacaoAcesso : Implementação
ControladoraApresentacaoAcessoHospede  ..|> InterfaceApresentacaoAcesso : Implementação
ControladoraApresentacaoAutenticavel  --* ControladoraServicoAutenticavel : Composição
ControladoraApresentacaoAutenticavel  --* InterfaceServicoAutenticavel : Composição
InterfaceApresentacaoAutenticavel  --* ControladoraServicoAutenticavel : Composição
InterfaceApresentacaoAutenticavel  --* InterfaceServicoAutenticavel : Composição
ControladoraApresentacaoPessoal  --* ControladoraServicoPessoal : Composição
ControladoraApresentacaoPessoal  --* InterfaceServicoPessoal : Composição
InterfaceApresentacaoPessoal  --* ControladoraServicoPessoal : Composição
InterfaceApresentacaoPessoal  --* InterfaceServicoPessoal : Composição
@enduml
